--- a/homeworks/json-parser/Makefile
+++ b/homeworks/json-parser/Makefile
@@ -1,4 +1,4 @@
-# This Makefile is for the Local::Iterator extension to perl.
+# This Makefile is for the Local::JSONParser extension to perl.
 #
 # It was generated automatically by MakeMaker version
 # 7.0401 (Revision: 70401) from the contents of
@@ -11,13 +11,14 @@
 
 #   MakeMaker Parameters:
 
+#     ABSTRACT_FROM => q[lib/Local/JSONParser.pm]
+#     AUTHOR => [q[Mons <mons@macports.org>]]
 #     BUILD_REQUIRES => {  }
 #     CONFIGURE_REQUIRES => {  }
-#     EXE_FILES => [q[bin/music_library.pl]]
-#     NAME => q[Local::Iterator]
+#     NAME => q[Local::JSONParser]
 #     PREREQ_PM => {  }
 #     TEST_REQUIRES => {  }
-#     VERSION_FROM => q[lib/Local/MusicLibrary.pm]
+#     VERSION_FROM => q[lib/Local/JSONParser.pm]
 
 # --- MakeMaker post_initialize section:
 
@@ -54,13 +55,13 @@ VENDORLIBEXP = /usr/share/perl5
 AR_STATIC_ARGS = cr
 DIRFILESEP = /
 DFSEP = $(DIRFILESEP)
-NAME = Local::Iterator
-NAME_SYM = Local_Iterator
-VERSION = 1.00
+NAME = Local::JSONParser
+NAME_SYM = Local_JSONParser
+VERSION = 0
 VERSION_MACRO = VERSION
-VERSION_SYM = 1_00
+VERSION_SYM = 0
 DEFINE_VERSION = -D$(VERSION_MACRO)=\"$(VERSION)\"
-XS_VERSION = 1.00
+XS_VERSION = 0
 XS_VERSION_MACRO = XS_VERSION
 XS_DEFINE_VERSION = -D$(XS_VERSION_MACRO)=\"$(XS_VERSION)\"
 INST_ARCHLIB = blib/arch
@@ -144,11 +145,11 @@ MM_REVISION = 70401
 # PARENT_NAME = NAME without BASEEXT and no trailing :: (eg Foo::Bar)
 # DLBASE  = Basename part of dynamic library. May be just equal BASEEXT.
 MAKE = make
-FULLEXT = Local/Iterator
-BASEEXT = Iterator
+FULLEXT = Local/JSONParser
+BASEEXT = JSONParser
 PARENT_NAME = Local
 DLBASE = $(BASEEXT)
-VERSION_FROM = lib/Local/MusicLibrary.pm
+VERSION_FROM = lib/Local/JSONParser.pm
 OBJECT = 
 LDFROM = $(OBJECT)
 LINKTYPE = dynamic
@@ -160,11 +161,7 @@ C_FILES  =
 O_FILES  = 
 H_FILES  = 
 MAN1PODS = 
-MAN3PODS = lib/Local/MusicLibrary.pm \
-	lib/Local/MusicLibrary/CutStr.pm \
-	lib/Local/MusicLibrary/Filter.pm \
-	lib/Local/MusicLibrary/Sort.pm \
-	lib/Local/PrintTable.pm
+MAN3PODS = 
 
 # Where is the Config information that we are using/depend on
 CONFIGDEP = $(PERL_ARCHLIBDEP)$(DFSEP)Config.pm $(PERL_INCDEP)$(DFSEP)config.h
@@ -187,22 +184,10 @@ PERL_ARCHIVEDEP    =
 PERL_ARCHIVE_AFTER = 
 
 
-TO_INST_PM = lib/Local/MusicLibrary.pm \
-	lib/Local/MusicLibrary/CutStr.pm \
-	lib/Local/MusicLibrary/Filter.pm \
-	lib/Local/MusicLibrary/Sort.pm \
-	lib/Local/PrintTable.pm
+TO_INST_PM = lib/Local/JSONParser.pm
 
-PM_TO_BLIB = lib/Local/MusicLibrary.pm \
-	blib/lib/Local/MusicLibrary.pm \
-	lib/Local/MusicLibrary/CutStr.pm \
-	blib/lib/Local/MusicLibrary/CutStr.pm \
-	lib/Local/MusicLibrary/Filter.pm \
-	blib/lib/Local/MusicLibrary/Filter.pm \
-	lib/Local/MusicLibrary/Sort.pm \
-	blib/lib/Local/MusicLibrary/Sort.pm \
-	lib/Local/PrintTable.pm \
-	blib/lib/Local/PrintTable.pm
+PM_TO_BLIB = lib/Local/JSONParser.pm \
+	blib/lib/Local/JSONParser.pm
 
 
 # --- MakeMaker platform_constants section:
@@ -271,8 +256,8 @@ CI = ci -u
 RCS_LABEL = rcs -Nv$(VERSION_SYM): -q
 DIST_CP = best
 DIST_DEFAULT = tardist
-DISTNAME = Local-Iterator
-DISTVNAME = Local-Iterator-1.00
+DISTNAME = Local-JSONParser
+DISTVNAME = Local-JSONParser-0
 
 
 # --- MakeMaker macro section:
@@ -426,18 +411,8 @@ POD2MAN_EXE = $(PERLRUN) "-MExtUtils::Command::MM" -e pod2man "--"
 POD2MAN = $(POD2MAN_EXE)
 
 
-manifypods : pure_all  \
-	lib/Local/MusicLibrary.pm \
-	lib/Local/MusicLibrary/CutStr.pm \
-	lib/Local/MusicLibrary/Filter.pm \
-	lib/Local/MusicLibrary/Sort.pm \
-	lib/Local/PrintTable.pm
-	$(NOECHO) $(POD2MAN) --section=$(MAN3EXT) --perm_rw=$(PERM_RW) -u \
-	  lib/Local/MusicLibrary.pm $(INST_MAN3DIR)/Local::MusicLibrary.$(MAN3EXT) \
-	  lib/Local/MusicLibrary/CutStr.pm $(INST_MAN3DIR)/Local::MusicLibrary::CutStr.$(MAN3EXT) \
-	  lib/Local/MusicLibrary/Filter.pm $(INST_MAN3DIR)/Local::MusicLibrary::Filter.$(MAN3EXT) \
-	  lib/Local/MusicLibrary/Sort.pm $(INST_MAN3DIR)/Local::MusicLibrary::Sort.$(MAN3EXT) \
-	  lib/Local/PrintTable.pm $(INST_MAN3DIR)/Local::PrintTable.$(MAN3EXT) 
+manifypods : pure_all 
+	$(NOECHO) $(NOOP)
 
 
 
@@ -446,22 +421,6 @@ manifypods : pure_all  \
 
 
 # --- MakeMaker installbin section:
-
-EXE_FILES = bin/music_library.pl
-
-pure_all :: $(INST_SCRIPT)/music_library.pl
-	$(NOECHO) $(NOOP)
-
-realclean ::
-	$(RM_F) \
-	  $(INST_SCRIPT)/music_library.pl 
-
-$(INST_SCRIPT)/music_library.pl : bin/music_library.pl $(FIRST_MAKEFILE) $(INST_SCRIPT)$(DFSEP).exists $(INST_BIN)$(DFSEP).exists
-	$(NOECHO) $(RM_F) $(INST_SCRIPT)/music_library.pl
-	$(CP) bin/music_library.pl $(INST_SCRIPT)/music_library.pl
-	$(FIXIN) $(INST_SCRIPT)/music_library.pl
-	-$(NOECHO) $(CHMOD) $(PERM_RWX) $(INST_SCRIPT)/music_library.pl
-
 
 
 # --- MakeMaker subdirs section:
@@ -522,7 +481,7 @@ metafile : create_distdir
 	$(NOECHO) $(ECHO) '---' > META_new.yml
 	$(NOECHO) $(ECHO) 'abstract: unknown' >> META_new.yml
 	$(NOECHO) $(ECHO) 'author:' >> META_new.yml
-	$(NOECHO) $(ECHO) '  - unknown' >> META_new.yml
+	$(NOECHO) $(ECHO) '  - '\''Mons <mons@macports.org>'\''' >> META_new.yml
 	$(NOECHO) $(ECHO) 'build_requires:' >> META_new.yml
 	$(NOECHO) $(ECHO) '  ExtUtils::MakeMaker: '\''0'\''' >> META_new.yml
 	$(NOECHO) $(ECHO) 'configure_requires:' >> META_new.yml
@@ -533,20 +492,20 @@ metafile : create_distdir
 	$(NOECHO) $(ECHO) 'meta-spec:' >> META_new.yml
 	$(NOECHO) $(ECHO) '  url: http://module-build.sourceforge.net/META-spec-v1.4.html' >> META_new.yml
 	$(NOECHO) $(ECHO) '  version: '\''1.4'\''' >> META_new.yml
-	$(NOECHO) $(ECHO) 'name: Local-Iterator' >> META_new.yml
+	$(NOECHO) $(ECHO) 'name: Local-JSONParser' >> META_new.yml
 	$(NOECHO) $(ECHO) 'no_index:' >> META_new.yml
 	$(NOECHO) $(ECHO) '  directory:' >> META_new.yml
 	$(NOECHO) $(ECHO) '    - t' >> META_new.yml
 	$(NOECHO) $(ECHO) '    - inc' >> META_new.yml
 	$(NOECHO) $(ECHO) 'requires: {}' >> META_new.yml
-	$(NOECHO) $(ECHO) 'version: '\''1.00'\''' >> META_new.yml
+	$(NOECHO) $(ECHO) 'version: '\''0'\''' >> META_new.yml
 	$(NOECHO) $(ECHO) 'x_serialization_backend: '\''CPAN::Meta::YAML version 0.012'\''' >> META_new.yml
 	-$(NOECHO) $(MV) META_new.yml $(DISTVNAME)/META.yml
 	$(NOECHO) $(ECHO) Generating META.json
 	$(NOECHO) $(ECHO) '{' > META_new.json
 	$(NOECHO) $(ECHO) '   "abstract" : "unknown",' >> META_new.json
 	$(NOECHO) $(ECHO) '   "author" : [' >> META_new.json
-	$(NOECHO) $(ECHO) '      "unknown"' >> META_new.json
+	$(NOECHO) $(ECHO) '      "Mons <mons@macports.org>"' >> META_new.json
 	$(NOECHO) $(ECHO) '   ],' >> META_new.json
 	$(NOECHO) $(ECHO) '   "dynamic_config" : 1,' >> META_new.json
 	$(NOECHO) $(ECHO) '   "generated_by" : "ExtUtils::MakeMaker version 7.0401, CPAN::Meta::Converter version 2.150005",' >> META_new.json
@@ -557,7 +516,7 @@ metafile : create_distdir
 	$(NOECHO) $(ECHO) '      "url" : "http://search.cpan.org/perldoc?CPAN::Meta::Spec",' >> META_new.json
 	$(NOECHO) $(ECHO) '      "version" : "2"' >> META_new.json
 	$(NOECHO) $(ECHO) '   },' >> META_new.json
-	$(NOECHO) $(ECHO) '   "name" : "Local-Iterator",' >> META_new.json
+	$(NOECHO) $(ECHO) '   "name" : "Local-JSONParser",' >> META_new.json
 	$(NOECHO) $(ECHO) '   "no_index" : {' >> META_new.json
 	$(NOECHO) $(ECHO) '      "directory" : [' >> META_new.json
 	$(NOECHO) $(ECHO) '         "t",' >> META_new.json
@@ -580,7 +539,7 @@ metafile : create_distdir
 	$(NOECHO) $(ECHO) '      }' >> META_new.json
 	$(NOECHO) $(ECHO) '   },' >> META_new.json
 	$(NOECHO) $(ECHO) '   "release_status" : "stable",' >> META_new.json
-	$(NOECHO) $(ECHO) '   "version" : "1.00",' >> META_new.json
+	$(NOECHO) $(ECHO) '   "version" : "0",' >> META_new.json
 	$(NOECHO) $(ECHO) '   "x_serialization_backend" : "JSON::PP version 2.27300"' >> META_new.json
 	$(NOECHO) $(ECHO) '}' >> META_new.json
 	-$(NOECHO) $(MV) META_new.json $(DISTVNAME)/META.json
@@ -860,7 +819,7 @@ testdb_static :: testdb_dynamic
 ppd :
 	$(NOECHO) $(ECHO) '<SOFTPKG NAME="$(DISTNAME)" VERSION="$(VERSION)">' > $(DISTNAME).ppd
 	$(NOECHO) $(ECHO) '    <ABSTRACT></ABSTRACT>' >> $(DISTNAME).ppd
-	$(NOECHO) $(ECHO) '    <AUTHOR></AUTHOR>' >> $(DISTNAME).ppd
+	$(NOECHO) $(ECHO) '    <AUTHOR>Mons &lt;mons@macports.org&gt;</AUTHOR>' >> $(DISTNAME).ppd
 	$(NOECHO) $(ECHO) '    <IMPLEMENTATION>' >> $(DISTNAME).ppd
 	$(NOECHO) $(ECHO) '        <ARCHITECTURE NAME="x86_64-linux-gnu-thread-multi-5.22" />' >> $(DISTNAME).ppd
 	$(NOECHO) $(ECHO) '        <CODEBASE HREF="" />' >> $(DISTNAME).ppd
@@ -872,11 +831,7 @@ ppd :
 
 pm_to_blib : $(FIRST_MAKEFILE) $(TO_INST_PM)
 	$(NOECHO) $(ABSPERLRUN) -MExtUtils::Install -e 'pm_to_blib({@ARGV}, '\''$(INST_LIB)/auto'\'', q[$(PM_FILTER)], '\''$(PERM_DIR)'\'')' -- \
-	  lib/Local/MusicLibrary.pm blib/lib/Local/MusicLibrary.pm \
-	  lib/Local/MusicLibrary/CutStr.pm blib/lib/Local/MusicLibrary/CutStr.pm \
-	  lib/Local/MusicLibrary/Filter.pm blib/lib/Local/MusicLibrary/Filter.pm \
-	  lib/Local/MusicLibrary/Sort.pm blib/lib/Local/MusicLibrary/Sort.pm \
-	  lib/Local/PrintTable.pm blib/lib/Local/PrintTable.pm 
+	  lib/Local/JSONParser.pm blib/lib/Local/JSONParser.pm 
 	$(NOECHO) $(TOUCH) pm_to_blib
 
 
